--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
+ <meta charset="UTF-8">
+
+
 <html>
 
 <head>
 <title>Au+ Energy Diagram</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<script src="//d3js.org/d3.v4.min.js" charset="utf-8"></script>
+<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
 </head>
 
@@ -16,7 +20,8 @@
 <svg class="chart"></svg>
 
 
-<script src="FirstTest.js"></script>
+<!--<script src="FirstTest.js"></script>
+-->
 <script src="BarGraph.js"></script>
 
 
