--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -8,6 +8,7 @@
 <title>Au+ Energy Diagram</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/4.1.2/math.js" charset="utf-8"></script>
 <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
 </head>
 
@@ -17,7 +18,8 @@
 
 <body>
 <h1>Au<sup>+</sup>+ nCH<sub>4</sub> </h1>
-<svg class="chart"></svg>
+
+<svg class="chart" style="outline: thin solid black")></svg>
 
 
 <!--<script src="FirstTest.js"></script>
