Colors fixed because sleep is for the week.

--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/4.1.2/math.js" charset="utf-8"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v0.3.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
 </head>
 
