--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -54,7 +54,7 @@
 
 
   <div class="mt-5">
-    <h1>Au<sup>+</sup>+ nCH<sub>4</sub> </h1>
+    <h1>Au<sup>+</sup>+ nCH<sub>4</sub> Energetic Well Summary: </h1>
   </div>
 
   <div class="jumbotron my-5">
