--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -5,6 +5,7 @@
 <html>
 
 <head>
+
 <title>Au+ Energy Diagram</title>
 <!-- Bootstrap 4 Stylesheet -->
 <link rel="stylesheet"
@@ -43,6 +44,7 @@
         charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/92/three.js"
         charset="utf-8"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
