--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -59,8 +59,12 @@
     <h1>Au<sup>+</sup>+ nCH<sub>4</sub> Energetic Well Summary: </h1>
   </div>
 
-  <div class="jumbotron my-5">
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+  <div class="jumbotron my-3">
+    <p>
+      To all involved. Please find below a comprehensize summary of the energetic wells I have explored for this system. They are categorized by Mass Spec signal,
+      so that we can easily see which structures could corespond to each observed mass. The Y axis, as normal, shows energy in kJ/mol. The energies reported are all
+      properly normalized to eachouth, and the reactants set at 0 kJ/mol.
+    </p>
   </div>
 
   <div id="chartContainer"> <!-- comment out this line and un-comment the row and col lines to split screen view -->
@@ -74,7 +78,12 @@
   </div>
 
   <div class="jumbotron my-5">
-      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <p>
+        Please send any questions or modifications suggestions to me at nkeyes@unm.edu and I will address them ASAP.
+      </p>
+      <p>
+        Nicholas R. Keyes
+      </p>
   </div>
 
 
