--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -55,15 +55,18 @@
 <div class="container" id="pageContainer">
 
 
-  <div class="mt-5">
+  <div class="my-5 pt-5">
     <h1>Au<sup>+</sup>+ nCH<sub>4</sub> Energetic Well Summary: </h1>
   </div>
 
-  <div class="jumbotron my-3">
+  <div class="jumbotron my-1 py-2">
     <p>
       To all involved. Please find below a comprehensize summary of the energetic wells I have explored for this system. They are categorized by Mass Spec signal,
       so that we can easily see which structures could corespond to each observed mass. The Y axis, as normal, shows energy in kJ/mol. The energies reported are all
       properly normalized to eachouth, and the reactants set at 0 kJ/mol.
+    </p>
+    <p>
+      If you are curious about the structre of one of the shown points, please just click on it! In any modern browser you will see it rendered, and rotated.
     </p>
   </div>
 
@@ -77,7 +80,7 @@
   <!-- </div> -->
   </div>
 
-  <div class="jumbotron my-5">
+  <div class="jumbotron my-5 py-2">
       <p>
         Please send any questions or modifications suggestions to me at nkeyes@unm.edu and I will address them ASAP.
       </p>
