--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -79,7 +79,7 @@
     <div id="3d"></div>
   <!-- </div> -->
   <!-- <div class="col-6"> -->
-    <svg id="chart" class="chart" style="outline: thin solid black"></svg>
+    <svg id="chart" class="chart"></svg>
   <!-- </div> -->
   </div>
 
@@ -88,7 +88,7 @@
         Please send any questions or modifications suggestions to me at nkeyes@unm.edu and I will address them ASAP.
       </p>
       <p>
-        Nicholas R. Keyes
+        -Nicholas R. Keyes
       </p>
   </div>
 
