--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -66,7 +66,7 @@
     <p>
      Please find below a comprehensize summary of the energetic wells I have explored for this system. They are categorized by Mass Spec signal,
       so that we can easily see which structures could correspond to each observed mass. The Y axis, as normal, shows energy in kJ/mol. The energies reported
-      are single point energies without ZPE correction, and the reactants set at 0 kJ/mol.
+      are single point energies with ZPE correction, and the reactants set at 0 kJ/mol.
     </p>
     <p>
       If you are curious about the structure of one of the shown points, please just click on it! In any modern browser you will see it rendered, and rotated.
