--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
 
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
 
-    <title>Bar Chart Exploration!</title>
+    <title>ToDo List</title>
 
     <link rel="stylesheet" type="text/css" href="style.css"></style>
 
 
 </head>
 <body>
+    This homepage will serve as a todo list for my doctorate research, and code development.
+
+
+
     <h1>Chemistry!</h1>
     <a href="AuEnergy.html">Gold</a>
 </body>
