Adding paragraph to homepage.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     This homepage will serve as a todo list for my doctorate research, and code development.
 
 
-
     <h1>Chemistry!</h1>
-    <a href="AuEnergy.html">Gold</a>
+
+    <p><a href="AuEnergy.html">Gold</a></p>
 </body>
 
 </html>
