Don't pull this to live!

--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -76,7 +76,7 @@
   <div id="chartContainer"> <!-- comment out this line and un-comment the row and col lines to split screen view -->
   <!-- <div class="row"> -->
     <!-- <div class="col-6"> -->
-    <div id="3d"></div>
+    <div id="threeD"></div>
   <!-- </div> -->
   <!-- <div class="col-6"> -->
     <svg id="chart" class="chart"></svg>
