--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -64,7 +64,7 @@
       To all involved:
     </p>
     <p>
-     Please find below a comprehensize summary of the energetic wells I have explored for this system. They are categorized by Mass Spec signal,
+     Please find below a comprehensize summary of the energetic wells I have explored for this system.They are orederd in roughly reaction direction, with side products shown along the way.
       so that we can easily see which structures could correspond to each observed mass. The Y axis, as normal, shows energy in kJ/mol. The energies reported
       are single point energies with ZPE correction, and the reactants set at 0 kJ/mol.
     </p>
