--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -68,6 +68,11 @@
       so that we can easily see which structures could correspond to each observed mass. The Y axis, as normal, shows energy in kJ/mol. The energies reported
       are single point energies with ZPE correction, and the reactants set at 0 kJ/mol.
     </p>
+
+    <p>
+      Note: -105 represents the structure 4, and -51 represents the ethylene structure.
+    </p>
+
     <p>
       If you are curious about the structure of one of the shown points, please just click on it! In any modern browser you will see it rendered, and rotated.
     </p>
@@ -87,6 +92,8 @@
       <p>
         Please send any questions or modifications suggestions to me at nkeyes@unm.edu and I will address them ASAP.
       </p>
+
+
       <p>
         -Nicholas R. Keyes
       </p>
