--- a/AuEnergy.html
+++ b/AuEnergy.html
@@ -74,7 +74,7 @@
     </p>
 
     <p>
-      If you are curious about the structure of one of the shown points, please just click on it! In any modern browser you will see it rendered, and rotated.
+      Click on the bars to see the geometry in realtime! In any modern browser you will see it rendered, and rotated.
     </p>
   </div>
 
