Added some fun pics and edited the index page to look extra tacky.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
 
 </head>
 <body>
-    This homepage will serve as a todo list for my doctorate research, and code development.
+        <h1>The best thing in life is graphs with no context.</h1>
+    <img src="graph1.png">
+    <img src="graph3.png">
+    <img src="graph4.png">
+    <img src="compare1.png">
+    <img src="compare2.png">
 
 
-    <h1>Chemistry!</h1>
+    
 
     <p><a href="AuEnergy.html">Gold</a></p>
 </body>
